refactor: 응답 처리 로직을 Service로 옮겨 Controller 간결화